baml_language/crates/baml_tests/snapshots/compiles/generic_field_chain/baml_tests__compiles__generic_field_chain__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 8903
---
=== HIR2 ===
class user.Box {
  value: user.T
}
class user.User {
  name: string
  age: int
}
function user.from_json(j: baml.json.json) -> user.Box  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.User  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.test_generic_capture(box: user.Box) -> string  [expr] {
  { let get_name = () -> string { {  } box.value.name } } get_name()
}
function user.test_generic_chain(box: user.Box) -> string  [expr] {
  {  } box.value.name
}
function user.test_nested_generic_chain(box: user.Box) -> string  [expr] {
  {  } box.value.value.name
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name.to_json(), "age": self.age.to_json() }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "value": self.value.to_json() }
}

--- captures ---
lambda () in test_generic_capture: captures [box]
