baml_language/crates/baml_tests/snapshots/compiles/generic_field_chain/baml_tests__compiles__generic_field_chain__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.Box {
  value: T
}
class user.Box$stream {
  value: T | null
}
class user.User {
  name: string
  age: int
}
class user.User$stream {
  name: string | null
  age: int | null
}
function user.test_generic_capture(box: user.Box<user.User>) -> string  [expr] {
  { let get_name = () -> string { {  } box.value.name } } get_name()
}
function user.test_generic_chain(box: user.Box<user.User>) -> string  [expr] {
  {  } box.value.name
}
function user.test_nested_generic_chain(box: user.Box<user.Box<user.User>>) -> string  [expr] {
  {  } box.value.value.name
}

--- captures ---
lambda () in test_generic_capture: captures [box]
