baml_language/crates/baml_tests/snapshots/compiles/generic_field_chain/baml_tests__compiles__generic_field_chain__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.Box.from_json(j: baml.json.json) -> Box<void> {
    // Locals:
    let _0: Box<void> // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(Box<#0>);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.User.from_json(j: baml.json.json) -> User {
    // Locals:
    let _0: User // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(User);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.test_generic_capture(box: Box<User>) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: Box<User> // box // param [captured]
    let _2: () -> string throws never // get_name
    let _3: () -> string throws never

    bb0: {
        _2 = make_closure lambda[0](copy _1);
        _3 = copy _2;
        _0 = call copy _3() -> [bb1];
    }

    bb1: {
        return;
    }
}

// lambda[0]
fn .<lambda(test_generic_capture, 0)>() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = copy capture[0].0.0;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.test_generic_chain(box: Box<User>) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: Box<User> // box // param

    bb0: {
        _0 = copy _1.0.0;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.test_nested_generic_chain(box: Box<Box<User>>) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: Box<Box<User>> // box // param

    bb0: {
        _0 = copy _1.0.0.0;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.User.to_json(self: User) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: User // self // param
    let _2: baml.json.json
    let _3: string
    let _4: User
    let _5: baml.json.json
    let _6: int
    let _7: User

    bb0: {
        _4 = copy _1;
        _3 = copy _4.0;
        _2 = call const fn baml.String.to_json(copy _3) -> [bb1];
    }

    bb1: {
        _7 = copy _1;
        _6 = copy _7.1;
        _5 = call const fn baml.Int.to_json(copy _6) -> [bb2];
    }

    bb2: {
        _0 = { const "name": copy _2, const "age": copy _5 };
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.Box.to_json(self: Box) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: Box // self // param
    let _2: baml.json.json
    let _3: () -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError
    let _4: void
    let _5: Box
    let _6: string

    bb0: {
        _5 = copy _1;
        _4 = copy _5.0;
        _6 = const "to_json";
        _3 = copy _4[_6];
        _2 = call copy _3() -> [bb1];
    }

    bb1: {
        _0 = { const "value": copy _2 };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
