baml_language/crates/baml_tests/snapshots/compiles/generic_field_chain/baml_tests__compiles__generic_field_chain__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Box {
  value: T
}
function user.Box.to_json(self: user.Box) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<Box<T>>(self)) : baml.json.json
}
function user.Box.from_json(j: baml.json.json) -> user.Box<unknown> throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Box<T>
}
class user.User {
  name: string
  age: int
}
function user.User.to_json(self: user.User) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<User>(self)) : baml.json.json
}
function user.User.from_json(j: baml.json.json) -> user.User throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.User
}
function user.test_generic_chain(box: user.Box<user.User>) -> string throws never {
  { : string
    box.value.name : string
  }
}
function user.test_nested_generic_chain(box: user.Box<user.Box<user.User>>) -> string throws never {
  { : string
    box.value.value.name : string
  }
}
function user.test_generic_capture(box: user.Box<user.User>) -> string throws never {
  { : string
    let get_name = : () -> string throws never
      () -> string { ... } : () -> string throws never
        {
          box.value.name
        }
    get_name() : string
  }
}
lambda user.test_generic_capture {
}
class user.Box$stream {
  value: null | T
}
class user.User$stream {
  name: null | string
  age: null | int
}
