baml_language/crates/baml_tests/snapshots/compiles/generic_field_chain/baml_tests__compiles__generic_field_chain__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 9014
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
