baml_language/crates/baml_tests/snapshots/compiles/generic_field_chain/baml_tests__compiles__generic_field_chain__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Box.from_json(j: baml.json.json) -> Box<void> {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type Box<#0>
    load_var _2
    call baml.json.from_string
    return
}

function user.Box.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .value
    call baml.json.to_json
    load_const "value"
    alloc_map 1
    return
}

function user.User.from_json(j: baml.json.json) -> User {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type User
    load_var _2
    call baml.json.from_string
    return
}

function user.User.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .name
    call baml.String.to_json
    store_var _2
    load_var self
    load_field .age
    call baml.Int.to_json
    store_var _5
    load_var _2
    load_var _5
    load_const "name"
    load_const "age"
    alloc_map 2
    return
}

function user.test_generic_capture(box: Box<User>) -> string {
    load_var ?1
    make_cell
    store_var ?1
    load_var box
    make_closure .<lambda(test_generic_capture, 0)>, 1
    call_indirect
    return
}

function user.test_generic_chain(box: Box<User>) -> string {
    load_var box
    load_field .value
    load_field .0
    return
}

function user.test_nested_generic_chain(box: Box<Box<User>>) -> string {
    load_var box
    load_field .value
    load_field .0
    load_field .0
    return
}
